2006-03-28  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Handle sortnames being NULL.

2006-03-28  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Don't leak the GnomeProgram (#335749)

2006-03-24  Ross Burton  <ross@burtonini.com>

	* help/sound-juicer/C/sound-juicer.xml:
	Tell people use to id3mux in the MP3 pipeline.
	
	* configure.in:
	Check for Taglib.

	* src/gsttaglib.cc:
	* src/gsttaglib.h:
	Add internal copy of GStreamer's taglib-based tagger.  Will remove
	when this is in gst-plugins-good.

	* src/sj-main.c:
	If there is no id3mux element available, register our copy.

2006-03-23  Christian Neumair  <chris@gnome-de.org>

	* src/sj-main.c:
	Ensure that play/pause button size stays constant.

	* src/sj-play.c:
	Don't process state change notifications from pipeline elements.
	Remove pending button_change_id/cb_set_time timeouts when registering
	them.
	Work around GStreamer bug (#326311) when seeking or changing song.
	This won't be neccessary when depending on GStreamer 0.10.5.

	Fixes #326311.

2006-03-23  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Handle all paranoia modes (#335593, thanks Marinus Schraal).

2006-03-20  Vladimer Sichinava  <vlsichinava@gmail.com>

	* configure.in: Added "ka" (Georgian) to ALL_LINGUAS

2006-03-19  Ross Burton  <ross@burtonini.com>

	* READNE:
	Update.

2006-03-19  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	* src/sj-play.c:
	Check all iterator fetching to avoid compiler warnings.

2006-03-19  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/sj-profile-chooser.c:
	* src/sj-profile-chooser.h:
	* src/Makefile.am:
	Remove SjProfileChooser as the chooser in gnome-media now shows
	MIME type.

2006-03-19  Ross Burton  <ross@burtonini.com>

	* src/sj-main:
	Fix program name not being translated (#335122, thanks chpe)

2006-03-19  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c:
	Change CD lookup query to allow MusicBrainz to proxy requests to