@@ -1,5 +1,10 @@
 2006-03-28  Ross Burton  <ross@burtonini.com>
 
+	* src/bacon-volume.c:
+	Volume should not display stock_volume-0 for volume > 0 (#335779).
+
+2006-03-28  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-extracting.c:
 	Handle sortnames being NULL.
 
